--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
 .content {
     flex: 1;
 }
+.bg-red { background-color: #dc3545; } /* لون أحمر */
+.bg-green { background-color: #28a745; } /* لون أخضر */
 
 /* Navbar Styling */
 .navbar {
@@ -341,12 +343,11 @@ body {
 /* General Section Styling */
 .features-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #eaf5ff; /* خلفة زرقاء فاتحة */
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 90px;
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
   }
   
   /* Individual Feature Box */
@@ -528,3 +529,4 @@ height: 100%;
         transform: scale(1);
     }
 }
+
